# pfds

./: .gitignore
ch02/: ch02.cabal
ch02/app/: ex_2_1.hs  ex_2_2.hs  ex_2_4.hs  ex_2_5a.hs  ex_2_5b.hs  ex_2_6.hs
ch03/: LICENSE  ch03.cabal
ch03/app/: Main.hs  ex3_2.hs  ex3_3.hs
ch05/: ch05.cabal
ch05/src/Data/: BatchedQueue.hs
ch05/src/Data/Queue/: Class.hs
