name:                ch05
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/t10471/ch03#readme
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t104711202@gmail.com
copyright:           MIT
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.Queue.Class 
                     , Data.BatchedQueue
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ch05-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ch05
  default-language:    Haskell2010
